--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
 
         <label>
             Coverter <b>de</b>
-            <select>
-                <option>R$ Real Brasileiro</option>
+            <select class="seletor1">
+                <option value="real">R$ Real Brasileiro</option>
+                <option value="dolar">US$ Dólar americano</option>
+                <option value="euro">€ Euro</option>
+                <option value="bitcoin">Bitcoin</option>
             </select>
         </label>
 
         <label>
             Coverter <b>para</b>
             <select class="seletor2">
-                <option value="dolar">US$ Dólar americano </option>
+                <option value="dolar">US$ Dólar americano</option>
                 <option value="euro">€ Euro</option>
+                <option value="bitcoin">Bitcoin</option>
+                <option value="real">R$ Real Brasileiro</option>
             </select>
 
         </label>
@@ -44,7 +49,7 @@
         <section>
 
             <div class="caixa">
-                <img src="./img/brasil 2.png" alt="logo-real">
+                <img class="logo1" src="./img/brasil 2.png" alt="logo-real">
                 <p class="tipo-moeda1">Real</p>
                 <p class="moeda-valor1">R$ 0,00</p>
             </div>
